--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
  <header>
      <h1>Johanna Swane</h1>
- </header>   
+     <nav>
+         <a href="#contact"></a>
+     </nav>
+ </header> 
+ <section id="contact">Contact</section>
 </body>
 </html>
