--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
      <h1>Johanna Swane</h1>
      <nav>
          <a href="#contact"></a>
+         <a href="#biography"></a>
      </nav>
  </header> 
  <section id="contact">Contact</section>
+ <section id="biography">Biography</section>
 </body>
 </html>
