Änderung index.html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
- <header>
-     <h1>Johanna Swane</h1>
-     <nav>
-         <a href="#contact"></a>
-         <a href="#biography"></a>
-     </nav>
- </header> 
- <section id="contact">Contact</section>
- <section id="biography">Biography</section>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Johanna Swane</h1>
+      <nav>
+        <a href="#contact"></a>
+        <a href="#biography"></a>
+        <a href="#skills"></a>
+        <a href="#projects"></a>
+      </nav>
+    </header>
+    <section id="contact">Contact</section>
+    <section id="biography">Biography</section>
+    <section id="skills">Skills</section>
+    <section id="projects">Projects</section>
+  </body>
 </html>
