New content und styling

--- a/index.html
+++ b/index.html
@@ -4,21 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/styles.css"/>
     <title>Document</title>
   </head>
   <body>
     <header>
       <h1>Johanna Swane</h1>
       <nav>
-        <a href="#contact"></a>
-        <a href="#biography"></a>
-        <a href="#skills"></a>
-        <a href="#projects"></a>
+        <h2>
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+          <a href="#biography">Biography</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#interests">Interests</a>
+        </h2>
       </nav>
     </header>
-    <section id="contact">Contact</section>
-    <section id="biography">Biography</section>
-    <section id="skills">Skills</section>
-    <section id="projects">Projects</section>
+    <fig class "box">
+    <img src="images/PicturePeople-3.JPG" alt="Profilbild">
+    <p>This is me!</p>
+</fig>
+    <main>
+      <h3><section id="about">About</section></h3>
+      <p>Hej! I am Johanna from Hamburg. Currently I am studying at 'neue fische' to become a web developer!</p>
+        <h3><section id="contact">Contact</section></h3
+            <p>mail: <a href>jswane@fische.com</a></p>
+            <p>phone: 016XXXXXXX</p>
+        <h3><section id="biography">Biography</section></h3>
+        <p>since 2022: Web development student at 'neue fische' Bootcamp, Hamburg</p>
+        <p>2018 - 2021: German language teacher for adults and children, Hamburg</p>
+        <p>2015 - 2017: Refugee camp manager, Hamburg</p>
+        <p>2006 - 2014: Latin American Sciences (Diplom), University of Cologne, Cologne</p>
+            <h3><section id="skills">Skills</section></h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+        </p>
+        <h3><section id="projects">Projects</section></h3> 
+        <p>github: <a href>https://github.com/jswane</a></p>
+            <p>codepen: <a href>https://codepen.io/jswane</a>
+            </p>
+        <h3><section id="interests">Interests</section></h3>
+        <p>
+            <ul>
+                <li>Traveling</li>
+                <li>Music</li>
+                <li>Singing</li>
+                <li>Playing the guitar</li>
+                <li>Volleyball</li>
+                <li>Politics</li>
+                <li>Reading</li>
+                <li>Cooking</li>
+            </ul>
+        </p>
+    </main>
   </body>
 </html>
