--- a/index.html
+++ b/index.html
@@ -8,33 +8,39 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>Johanna Swane</h1>
       <nav>
         <h2>
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
-          <a href="#biography">Biography</a>
-          <a href="#skills">Skills</a>
-          <a href="#projects">Projects</a>
-          <a href="#interests">Interests</a>
+          <nav class="navigation" id="top">
+          <a class="button" href="#about">About</a>
+          <a class="button" href="#contact">Contact</a>
+          <a class="button" href="#biography">Biography</a>
+          <a class="button"href="#skills">Skills</a>
+          <a class="button"href="#projects">Projects</a>
+          <a class="button"href="#interests">Interests</a>
+          </nav>
+          <header>
+            <h1>Johanna Swane</h1>
         </h2>
       </nav>
     </header>
-    <fig class "box">
-    <img src="images/PicturePeople-3.JPG" alt="Profilbild">
+    <fig class="box">
+    <img class="profile-picture" src="images/PicturePeople-3.JPG" alt="Profilbild">
     <p>This is me!</p>
 </fig>
     <main>
       <h3><section id="about">About</section></h3>
       <p>Hej! I am Johanna from Hamburg. Currently I am studying at 'neue fische' to become a web developer!</p>
-        <h3><section id="contact">Contact</section></h3
-            <p>mail: <a href>jswane@fische.com</a></p>
-            <p>phone: 016XXXXXXX</p>
+        <h3><section id="contact">Contact</section></h3>
+            <span>mail: <a href>jswane@fische.com</a></span>
+            <br>
+            <span>phone: 016XXXXXXX</span>
         <h3><section id="biography">Biography</section></h3>
         <p>since 2022: Web development student at 'neue fische' Bootcamp, Hamburg</p>
+        <br>
         <p>2018 - 2021: German language teacher for adults and children, Hamburg</p>
+        <br>
         <p>2015 - 2017: Refugee camp manager, Hamburg</p>
+        <br>
         <p>2006 - 2014: Latin American Sciences (Diplom), University of Cologne, Cologne</p>
             <h3><section id="skills">Skills</section></h3>
           <ul>
