--- a/index.html
+++ b/index.html
@@ -12,28 +12,24 @@
         <h2>
           <nav class="navigation" id="top">
           <a class="button" href="#about">About</a>
-          <a class="button" href="#contact">Contact</a>
           <a class="button" href="#biography">Biography</a>
           <a class="button"href="#skills">Skills</a>
           <a class="button"href="#projects">Projects</a>
           <a class="button"href="#interests">Interests</a>
+          <a class="button" href="#contact">Contact</a>
           </nav>
           <header>
             <h1>Johanna Swane</h1>
         </h2>
       </nav>
     </header>
-    <fig class="box">
+    <fig class="image-fit">
     <img class="profile-picture" src="images/PicturePeople-3.JPG" alt="Profilbild">
-    <p>This is me!</p>
+    <figcaption>This is me!</figcaption>
 </fig>
     <main>
       <h3><section id="about">About</section></h3>
       <p>Hej! I am Johanna from Hamburg. Currently I am studying at 'neue fische' to become a web developer!</p>
-        <h3><section id="contact">Contact</section></h3>
-            <span>mail: <a href>jswane@fische.com</a></span>
-            <br>
-            <span>phone: 016XXXXXXX</span>
         <h3><section id="biography">Biography</section></h3>
         <p>since 2022: Web development student at 'neue fische' Bootcamp, Hamburg</p>
         <br>
@@ -50,9 +46,13 @@
           </ul>
         </p>
         <h3><section id="projects">Projects</section></h3> 
-        <p>github: <a href>https://github.com/jswane</a></p>
-            <p>codepen: <a href>https://codepen.io/jswane</a>
-            </p>
+        <figure>
+          <a href="https://github.com/jswane"><img class="github icon" src="images/GitHub-Mark-64px.png" alt="Github Icon"></a>
+        <figcaption>Github</figcaption>
+        </figure>
+            <figure>
+              <a href="https://codepen.io/jswane"><img class="codepen icon" src="images/1298732_codepen_icon.png" alt="Codepen Icon"></a>
+<figcaption>Codepen</figcaption>
         <h3><section id="interests">Interests</section></h3>
         <p>
             <ul>
@@ -66,6 +66,10 @@
                 <li>Cooking</li>
             </ul>
         </p>
+        <h3><section id="contact">Contact</section></h3>
+        <span>mail: <a href>jswane@fische.com</a></span>
+        <br>
+        <span>phone: 016XXXXXXX</span>
     </main>
   </body>
 </html>
