--- a/index.html
+++ b/index.html
@@ -4,57 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.css"/>
+    <link rel="stylesheet" href="./styles/main.css"/>
     <title>Document</title>
   </head>
   <body>
-      <nav>
-        <h2>
-          <nav class="navigation" id="top">
-          <a class="button" href="#about">About</a>
-          <a class="button" href="#contact">Contact</a>
-          <a class="button" href="#biography">Biography</a>
-          <a class="button"href="#skills">Skills</a>
-          <a class="button"href="#projects">Projects</a>
-          <a class="button"href="#interests">Interests</a>
+      <header>
+          <nav class="top-nav">
+          <a class="top-nav__button" href="#about">About</a>
+          <a class="top-nav__button" href="#biography">Biography</a>
+          <a class="top-nav__button" href="#skills">Skills</a>
+          <a class="top-nav__button" href="#interests">Interests</a>
+          <a class="top-nav__button" href="#follow-me">Follow me</a>
+          <a class="top-nav__button" href="#contact">Contact</a>
           </nav>
-          <header>
-            <h1>Johanna Swane</h1>
-        </h2>
-      </nav>
-    </header>
-    <fig class="box">
+    <h1>Johanna Swane</h1>
+    <fig class="image-fit">
     <img class="profile-picture" src="images/PicturePeople-3.JPG" alt="Profilbild">
-    <p>This is me!</p>
+    <figcaption>This is me!</figcaption>
 </fig>
+</header> 
     <main>
-      <h3><section id="about">About</section></h3>
-      <p>Hej! I am Johanna from Hamburg. Currently I am studying at 'neue fische' to become a web developer!</p>
-        <h3><section id="contact">Contact</section></h3>
-            <span>mail: <a href>jswane@fische.com</a></span>
-            <br>
-            <span>phone: 016XXXXXXX</span>
-        <h3><section id="biography">Biography</section></h3>
-        <p>since 2022: Web development student at 'neue fische' Bootcamp, Hamburg</p>
+      <h2><section id="about">About</section></h2>
+      <p class="section-content">Hej! I am Johanna from Hamburg. Currently I am studying at 'neue fische' to become a web developer!</p>
+        <h2><section id="biography">Biography</section></h2>
+        <p class="section-content">since 2022: Web development student at 'neue fische' Bootcamp, Hamburg</p>
         <br>
-        <p>2018 - 2021: German language teacher for adults and children, Hamburg</p>
+        <p class="section-content">2018 - 2021: German language teacher for adults and children, Hamburg</p>
         <br>
-        <p>2015 - 2017: Refugee camp manager, Hamburg</p>
+        <p class="section-content">2015 - 2017: Refugee camp manager, Hamburg</p>
         <br>
-        <p>2006 - 2014: Latin American Sciences (Diplom), University of Cologne, Cologne</p>
-            <h3><section id="skills">Skills</section></h3>
+        <p class="section-content">2006 - 2014: Latin American Sciences (Diplom), University of Cologne, Cologne</p>
+            <h2><section id="skills">Skills</section></h2>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
           </ul>
         </p>
-        <h3><section id="projects">Projects</section></h3> 
-        <p>github: <a href>https://github.com/jswane</a></p>
-            <p>codepen: <a href>https://codepen.io/jswane</a>
-            </p>
-        <h3><section id="interests">Interests</section></h3>
-        <p>
+        <h2><section id="interests">Interests</section></h2>
+        <p class="section-content">
             <ul>
                 <li>Traveling</li>
                 <li>Music</li>
@@ -66,6 +54,17 @@
                 <li>Cooking</li>
             </ul>
         </p>
+        <h2><section id="follow-me">Follow me</section></h2> 
+        <figure class="figure__logo">
+          <a href="https://github.com/jswane"><img class="github icon" src="images/GitHub-Mark-64px.png" alt="Github Icon"></a>
+        <figcaption>Github</figcaption>
+        </figure>
+            <figure class="figure__logo">
+              <a href="https://codepen.io/jswane"><img class="codepen icon" src="images/1298732_codepen_icon.png" alt="Codepen Icon"></a>
+<figcaption>Codepen</figcaption>
+        <h2><section id="contact">Contact</section></h2>
+        <span> mail: <a href="jswane@neuefische.com">jswane@neuefische.com</a></span>
+        <span> phone: 016XXXXXXX</span>
     </main>
   </body>
 </html>
